added docker file
