# src/main/resources/SwaggerConfig.yaml
@@ -25,7 +25,7 @@ paths:
         200:
           description: "Nice!"
           schema:
-            $ref: "#/definitions/Student"
+            $ref: "#/definitions/APIResponse"
         400:
           description: "Error happened"
           schema:
@@ -80,7 +80,7 @@ paths:
         200:
           description: "Nice!"
           schema:
-            $ref: "#/definitions/Student"
+            $ref: "#/definitions/APIResponse"
         204:
           description: "No Content"
         400:
@@ -107,7 +107,8 @@ paths:
         200:
           description: "Nice!"
           schema:
-            $ref: "#/definitions/Student"
+            type: integer
+            format: int64
         400:
           description: "Error happened"
           schema:
@@ -127,12 +128,12 @@ paths:
         - "Welcome"
       summary: "Welcome message"
       description: "Hello method"
-      operationId: "welcome all"
+      operationId: "welcomeAll"
       responses:
         200:
           description: "Nice!"
           schema:
-            $ref: "#/definitions/Student"
+            type: string
         401:
           description: "Unauthorized"
         403:
@@ -158,7 +159,7 @@ paths:
         200:
           description: "Nice!"
           schema:
-            $ref: "#/definitions/Student"
+            $ref: "#/definitions/APIResponse"
         400:
           description: "Error happened"
           schema:
@@ -188,7 +189,7 @@ paths:
         200:
           description: "Nice!"
           schema:
-            $ref: "#/definitions/Student"
+            $ref: "#/definitions/APIResponse"
         204:
           description: "No content"
         400:
